 NEWS/ChangeLog for rJava
--------------------------

0.4-13	(under development)
    o	.jmkref now accepts plain class names (with .)

    o	Fixed bug in .jarray (and underlying RcreateArray) that was
	returning wrong class name if the contents class was an array.

    o	Update URL to http://www.rforge.net/rJava/

    o	Update to JRI 0.3-7 (LCons, createRJavaRef, assign XT_NONE) 

0.4-12	2006-11-29
    o	Added documentation for .jthrow, .jclear and .jgetEx and
	a bugfix in .jgetEx

    o	rJava now uses a namespace. This is still somewhat experimental,
	because rJava needs to perform some dirty tricks to unseal
	the namespace during initialization. Please test and report!

    o	Update to JRI 0.3-6 (GIJ fix and fix for R-devel interface changes)

0.4-11  2006-10-10
    o	Replace variadic macros with wrappers (for compilers that don't
	support ISO C99).

    o	Modify JNI error reporting - use warnings instead of direct stderr.

    o	Update to JRI 0.3-5

0.4-10	2006-09-14
    o	Removed obsolete JNI 1.1 support that is no longer provided
	in JDK 1.6 and thus prevented rJava from being used with JDK 1.6

    o	Update to JRI 0.3-4 (change compilation to force Java 1.4
	compatibility even when more recent JDK is used)

0.4-9	2006-09-12
    o	Update to JRI 0.3-3 which fixes API version mistake which

0.4-8	2006-09-11
    o	Added --enable-jri=auto option which will build JRI only if R
	shared library is present. It is now the default.

    o	Update to JRI 0.3-2 (added boolean support)

0.4-7	2006-09-05
    o	.jevalArray now works with Java objects that have not been
	cast to a Java array explicitly. The function is now also
	documented properly.

    o	Added .jgetEx and .jclear functions for querying and clearing
	of Java exceptions/throwables.

    o	Added .jthrow to allow throwing of exceptions from R code.

    o	Fixed a typo in .jrcall when handling string return values.

0.4-6	2006-08-20
    o	Fixed bug in initialization on Windows, introduced in 0.4-4
